# dictionary_C

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Subject.md  circle.yml
lib/: CMakeLists.txt
lib/AccelLib/: CMakeLists.txt
lib/AccelLib/include/: AccelLib.h
lib/AccelLib/include/AccelLib/: _log.h  file.h  strings.h  terminal.h  testOS.h  time.h  time_.h  version.h
lib/md5/: CMakeLists.txt
resources/: big_dic.txt  en_words  fr_words  liste.de.mots.francais.frgut.txt  liste_francais.txt
src/: CMakeLists.txt  addition.c  addition.h  buffer.c  buffer.h  dictionary.c  dictionary.h  gestbib.c  gestbib.h  gestexpr.c  gestexpr.h  gestmemory.c  gestmemory.h  gestorth.c  gestorth.h  gestrech.c  gestrech.h  input.c  input.h  linked_words.c  linked_words.h  main.c  main1.c  main2.c  main3.c  main4.c  menu.c  menu.h  metadata.c  metadata.h  utils.c  utils.h
test/: CMakeLists.txt  check_addition.c
